apps/overlays/development/linkstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkstack
spec:
  template:
    spec:
      containers:
      - name: linkstack
        image: linkstackorg/linkstack
        volumeMounts:
          - name: linkstack
            mouthPath: /htdocs
      volumes:
      - name: linkstack
        emptyDir:
          sizeLimit: 500Mi
