apps/overlays/development/linkstack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkstack-httproute-local
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - linkstack.local.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: linkstack-svc
      port: 443
